[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/Sprites/Npc/PlataformaMovil/PlataformaMovilVerde1.png" type="Texture" id=1]
[ext_resource path="res://game/Objects/FallingPlatform.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 41.093, 8.42116 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 39.7708, 1.28155 )

[sub_resource type="Animation" id=3]
resource_name = "fall"
length = 0.2
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 200 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.02 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "disable_collider"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=4]
resource_name = "shake"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1.7949, 0 ), Vector2( -1.7949, 0 ), Vector2( 2.06414, 0 ), Vector2( 0, 0 ), Vector2( 1.7949, 0 ), Vector2( -1.7949, 0 ), Vector2( 2.06414, 0 ), Vector2( 0, 0 ), Vector2( 1.7949, 0 ), Vector2( -1.7949, 0 ) ]
}

[node name="FallingPlatform" type="KinematicBody2D"]
z_index = 36
collision_layer = 0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1.29646, 1.29646 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 0.857452 )
shape = SubResource( 1 )

[node name="PlayerDetector" type="Area2D" parent="."]
modulate = Color( 0.360784, 1, 0, 1 )
position = Vector2( 0, -9.00434 )
collision_layer = 0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fall = SubResource( 3 )
anims/shake = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
one_shot = true
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
